--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cognia-AI Mental Health Chatbot</title>
+    <title>Cognia- Mental Health Chatbot</title>
     <!-- Link to the CSS file -->
     <link rel="stylesheet" href="./static/style.css">
 </head>
 <body>
     <div class="heading">
-        <h1>Cognia-AI</h1>
+        <h1>Cognia</h1>
         <p>Your Personal Mental Health Assistant!</p>
     </div>
     <div class="chat-container">
@@ -25,4 +25,5 @@
     <!-- Link to the JavaScript file -->
     <script src="./static/script.js"></script>
 </body>
+
 </html>
